--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,13 @@ jobs:
     - image: circleci/openjdk:8-jdk-stretch
     steps:
       - checkout
-      - run: Check versions
+      - run:
+          name: Check ant version
           command: ant -version
-          command: javac -version
       - run:
           name: Launch ant
           command: ant runtime
- workflows:
+workflows:
   version: 2
   build-and-deploy:
     jobs:
